--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,18 @@
         xmlns:local="clr-namespace:GestionCantine"
         mc:Ignorable="d"
         Title="Gestion Cantine" Height="450" Width="800">
-    <Grid Background="#FF293241">
+    <Window.Resources>
+        <SolidColorBrush x:Key="BorderBoutton" Color="#FFEE6C4D"/>
+        <SolidColorBrush x:Key="FondBoutton" Color="#FF98C1D9"/>
+        <SolidColorBrush x:Key="TextLabel" Color="#FF98C1D9"/>
+        <SolidColorBrush x:Key="BackgroundWindow" Color="#FF293241"/>
+    </Window.Resources>
+    <Grid Background="{DynamicResource BackgroundWindow}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="3*"/>
         </Grid.RowDefinitions>
-        <Label Content="Gestion Cantine" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="#FF98C1D9"/>
+        <Label Content="Gestion Cantine" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="{DynamicResource TextLabel}"/>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.2*"/>
@@ -27,10 +33,10 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1.5*"/>
             </Grid.RowDefinitions>
-            <Button x:Name="BtnReservations" Content="Reservations" Grid.Row="1" Grid.Column="1" Background="#FF98C1D9" FontSize="20" BorderBrush="#FFEE6C4D" Click="OpenWindow"/>
-            <Button Content="Menus" Grid.Row="3" Grid.Column="1" Background="#FF98C1D9" FontSize="20" BorderBrush="#FFEE6C4D"/>
-            <Button Content="Eleves" Grid.Row="1" Grid.Column="3" Background="#FF98C1D9" FontSize="20" BorderBrush="#FFEE6C4D"/>
-            <Button Content="Paiements" Grid.Row="3" Grid.Column="3" Background="#FF98C1D9" FontSize="20" BorderBrush="#FFEE6C4D"/>
+            <Button x:Name="BtnReservations" Content="Reservations" Grid.Row="1" Grid.Column="1" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}"/>
+            <Button Content="Menus" Grid.Row="3" Grid.Column="1" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}"/>
+            <Button Content="Eleves" Grid.Row="1" Grid.Column="3" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}"/>
+            <Button Content="Paiements" Grid.Row="3" Grid.Column="3" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}"/>
         </Grid>
     </Grid>
 </Window>
