--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GestionCantine"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+    xmlns:System="clr-namespace:System;assembly=System.Runtime">
     <Application.Resources>
-         
+
+        <System:Double x:Key="Font">20</System:Double>
+        <SolidColorBrush x:Key="BorderBoutton" Color="#FFEE6C4D"/>
+        <SolidColorBrush x:Key="FondBoutton" Color="#FF98C1D9"/>
+         <SolidColorBrush x:Key="TextLabel" Color="#FF98C1D9"/>
+        <SolidColorBrush x:Key="BackgroundWindow" Color="#FF293241"/>
     </Application.Resources>
 </Application>
