--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -5,8 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionCantine.Listes"
         mc:Ignorable="d"
-        Title="Reservations" Height="450" Width="800">
+        Title="Reservations" Height="450" Width="800" Background="{DynamicResource BackgroundWindow}">
     <Grid>
-        
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="Liste des &lt;NomTable>" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="{DynamicResource TextLabel}"/>
+
+
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="6*"/>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="0.1*"/>
+                </Grid.ColumnDefinitions>
+
+                <DataGrid Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False"></DataGrid>
+
+                <Grid Grid.Column="3">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="0.1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="0.1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <TextBlock Grid.Row="0" Grid.Column="0" />
+                </Grid>
+
+            </Grid>
+
+
+        </Grid>
+
     </Grid>
 </Window>
