--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -7,16 +7,19 @@
         mc:Ignorable="d"
         Title="Reservations" Height="450" Width="800" Background="{DynamicResource BackgroundWindow}">
     <Grid>
-
+         
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="3*"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="0.1*"/>
                 <RowDefinition Height="1*"/>
+                <RowDefinition Height="0.1*"/>
             </Grid.RowDefinitions>
+            <!--Row 0--> 
             <Label Grid.Row="0" Content="Liste des &lt;NomTable>" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="{DynamicResource TextLabel}"/>
 
-
+            <!--Row 1-->
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.1*"/>
@@ -27,7 +30,7 @@
                 </Grid.ColumnDefinitions>
 
                 <DataGrid Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False"></DataGrid>
-
+                
                 <Grid Grid.Column="3">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
@@ -36,11 +39,26 @@
                         <RowDefinition Height="0.1*"/>
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
-                    
-                    <TextBlock Grid.Row="0" Grid.Column="0" />
-                </Grid>
 
+                    <Button Content="Ajouter" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15"/>
+                    <Button Grid.Row="2" Content="Modifier" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15"/>
+                    <Button Grid.Row="4" Content="Supprimer" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15"/>
+                </Grid>
+                    
             </Grid>
+
+
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="6.1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="0.1*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="2" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15"/>
+            </Grid>
+
 
 
         </Grid>
