--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -66,7 +66,7 @@
                         <RowDefinition Height="0.2*"/>
                     </Grid.RowDefinitions>
                    
-                    <Button Grid.Row="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15"/>
+                    <Button Grid.Row="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Back"/>
 
                 </Grid>
 
