--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -29,7 +29,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False"></DataGrid>
+                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False"></DataGrid>
                 
                 <Grid Grid.Column="3">
                     <Grid.RowDefinitions>
