--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -29,7 +29,17 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False"></DataGrid>
+                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Date" Binding="{Binding DateReservation}" Width="1*"/>
+                        <DataGridTextColumn Header="Nom de l'élève" Binding="{Binding NomEleve}" Width="1.5*"/>
+                        <DataGridTextColumn Header="Prenom de l'élève" Binding="{Binding PrenomEleve}" Width="1.5*"/>
+                        <DataGridTextColumn Header="Date de naissance" Binding="{Binding DDNEleve}" Width="1.5*"/>
+                        <DataGridTextColumn Header="Date du menu" Binding="{Binding DateMenu}" Width="1*"/>
+                        <DataGridTextColumn Header="Menu" Binding="{Binding LibelleMenu}" Width="3*"/>
+                        <DataGridTextColumn Header="Prix" Binding="{Binding PrixMenu}" Width="0.5*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
                 
                 <Grid Grid.Column="3">
                     <Grid.RowDefinitions>
