--- a/Formulaires/ReservationsForm.xaml
+++ b/Formulaires/ReservationsForm.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="GestionCantine.Formulaires.Reservations"
+﻿<Window x:Class="GestionCantine.Formulaires.ReservationsForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionCantine.Formulaires"
         mc:Ignorable="d"
-        Title="Reservations" Height="450" Width="800">
+        Title="ReservationsForm" Height="450" Width="800">
     <Grid>
         
     </Grid>
