--- a/Listes/Paiements.xaml
+++ b/Listes/Paiements.xaml
@@ -75,7 +75,7 @@
                         <RowDefinition Height="0.2*"/>
                     </Grid.RowDefinitions>
 
-                    <Button Grid.Row="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Back"/>
+                    <Button Grid.Row="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" />
 
                 </Grid>
 
