--- a/Formulaires/ReservationsForm.xaml
+++ b/Formulaires/ReservationsForm.xaml
@@ -17,7 +17,7 @@
                 <RowDefinition Height="0.1*"/>
             </Grid.RowDefinitions>
             <!--Row 0-->
-            <Label x:Name="titreForm" Grid.Row="0" Content="Liste des &lt;NomTable>" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="{DynamicResource TextLabel}"/>
+            <Label x:Name="titreForm" Grid.Row="0" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="45" Foreground="{DynamicResource TextLabel}"/>
 
             <!--Row 1-->
             <Grid Grid.Row="1">
@@ -122,6 +122,50 @@
                 </Grid>
 
             </Grid>
+
+
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="7.1*"/>
+                    <ColumnDefinition Width="0.1*"/>
+                </Grid.ColumnDefinitions>
+
+
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="0.02*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+
+
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.2*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="0.2*"/>
+                        </Grid.RowDefinitions>
+                        
+                        <Button x:Name="action" Grid.Row="1" Content="" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}"/>
+                    </Grid>
+
+                    <Grid Grid.Column="3">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.2*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="0.2*"/>
+                        </Grid.RowDefinitions>
+
+                        <Button Grid.Row="1" Content="Retour" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}"/>
+                    </Grid>
+
+                </Grid>
+
+            </Grid>
+
 
 
 
