--- a/Formulaires/EleveForm.xaml
+++ b/Formulaires/EleveForm.xaml
@@ -38,6 +38,6 @@
         <TextBox x:Name="Prenom" Grid.Column="3" Grid.Row="6" Text="" VerticalContentAlignment="Center" FontSize="20"/>
         <DatePicker x:Name="DateDeNaissance" Grid.Row="8" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <Button Content="Valider" Grid.Column="1" Grid.Row="10" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}" FontSize="20" Click="Go"/>
-        <Button Content="Retour" Grid.Column="3" Grid.Row="10" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}" Grid.ColumnSpan="2" FontSize="20"/>
+        <Button Content="Retour" Grid.Column="3" Grid.Row="10" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}" Grid.ColumnSpan="2" FontSize="20" Click="Back"/>
     </Grid>
 </Window>
