--- a/Listes/Menus.xaml
+++ b/Listes/Menus.xaml
@@ -47,8 +47,8 @@
                         <RowDefinition Height="0.5*"/>
                     </Grid.RowDefinitions>
 
-                    <Button Grid.Row="1" Content="Ajouter" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Button_Action"/>
-                    <Button Grid.Row="3" Content="Modifier" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Button_Action"/>
+                    <Button Grid.Row="1" Content="Ajouter" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Button_Actions_Click"/>
+                    <Button Grid.Row="3" Content="Modifier" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Button_Actions_Click"/>
                     <Button Grid.Row="5" Content="Supprimer" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Button_Action"/>
                 </Grid>
 
