--- a/Formulaires/ReservationsForm.xaml
+++ b/Formulaires/ReservationsForm.xaml
@@ -56,7 +56,7 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
 
-                    <DataGrid x:Name="dg" Grid.Row="2" CanUserAddRows="False" AutoGenerateColumns="False">
+                    <DataGrid x:Name="dgEleve" Grid.Row="2" CanUserAddRows="False" AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Nom de l'élève" Binding="{Binding NomEleve}" Width="1*"/>
                             <DataGridTextColumn Header="Prenom de l'élève" Binding="{Binding PrenomEleve}" Width="1*"/>
@@ -89,7 +89,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Row="0" Grid.Column="0" Content="Date de la réservation :" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="15" Foreground="{DynamicResource TextLabel}" />
-                        <DatePicker Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <DatePicker x:Name="dateReservationPicker" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                     </Grid>
 
                 </Grid>
@@ -149,7 +149,7 @@
                             <RowDefinition Height="0.2*"/>
                         </Grid.RowDefinitions>
                         
-                        <Button x:Name="action" Grid.Row="1" Content="" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}"/>
+                        <Button x:Name="action" Grid.Row="1" Content="" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}" Click="btnActionClick"/>
                     </Grid>
 
                     <Grid Grid.Column="3">
@@ -159,7 +159,7 @@
                             <RowDefinition Height="0.2*"/>
                         </Grid.RowDefinitions>
 
-                        <Button Grid.Row="1" Content="Retour" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}"/>
+                        <Button Grid.Row="1" Content="Retour" Background="{DynamicResource FondBoutton}" BorderBrush="{DynamicResource BorderBoutton}" Click="Back"/>
                     </Grid>
 
                 </Grid>
