Bnt mode de paiement In main

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,9 +16,11 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.2*"/>
-                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.32*"/>
+                <ColumnDefinition Width="0.16*"/>
                 <ColumnDefinition Width="0.2*"/>
-                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.16*"/>
+                <ColumnDefinition Width="0.32*"/>
                 <ColumnDefinition Width="0.2*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -26,12 +28,16 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="0.3*"/>
                 <RowDefinition Height="1*"/>
-                <RowDefinition Height="1.5*"/>
+                <RowDefinition Height="0.3*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="0.3*"/>
+                <RowDefinition Height="0.5*"/>
             </Grid.RowDefinitions>
-            <Button x:Name="BtnReservations" Content="Reservations" Grid.Row="1" Grid.Column="1" Background="{DynamicResource FondBoutton}" FontSize="{DynamicResource Font}" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
-            <Button x:Name="BtnMenus"  Content="Menus" Grid.Row="3" Grid.Column="1" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
-            <Button x:Name="BtnEleves" Content="Eleves" Grid.Row="1" Grid.Column="3" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
-            <Button x:Name="BtnPaiements" Content="Paiements" Grid.Row="3" Grid.Column="3" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
+            <Button x:Name="BtnReservations" Content="Reservations" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Background="{DynamicResource FondBoutton}" FontSize="{DynamicResource Font}" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
+            <Button x:Name="BtnMenus"  Content="Menus" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
+            <Button x:Name="BtnEleves" Content="Eleves" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
+            <Button x:Name="BtnPaiements" Content="Paiements" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
+            <Button x:Name="BtnModePaiements" Content="Modes de paiements" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3" Background="{DynamicResource FondBoutton}" FontSize="20" BorderBrush="{DynamicResource BorderBoutton}" Click="OpenWindow"/>
         </Grid>
     </Grid>
 </Window>
