--- a/Listes/Eleves.xaml
+++ b/Listes/Eleves.xaml
@@ -52,10 +52,7 @@
                     <Button Grid.Row="3" Content="Modifier" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Action"/>
                     <Button Grid.Row="5" Content="Supprimer" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Action"/>
                 </Grid>
-
             </Grid>
-
-
             <Grid Grid.Row="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.1*"/>
@@ -63,18 +60,16 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
-
-
-                <Grid Grid.Column="2">
+                  <Grid Grid.Column="2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0.2*"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="0.2*"/>
                     </Grid.RowDefinitions>
-
-                    <Button Grid.Row="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Back"/>
-
+                    <Button Grid.Row="1" Grid.Column="1" Content="Retour" BorderBrush="{DynamicResource BorderBoutton}" Background="{DynamicResource FondBoutton}" FontSize="15" Click="Back"/>
                 </Grid>
+                
+                
 
             </Grid>
 
