--- a/Listes/Paiements.xaml
+++ b/Listes/Paiements.xaml
@@ -29,7 +29,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid x:Name="dgPaiements" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False">
+                <DataGrid x:Name="dgPaiements" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False" CellStyle="{DynamicResource SelectedBackground}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Montant" Binding="{Binding MontantPaiement}" Width="1*"/>
                         <DataGridTextColumn Header="Date de paiement" Binding="{Binding DatePaiement}" Width="2*"/>
