--- a/Listes/Eleves.xaml
+++ b/Listes/Eleves.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionCantine.Listes"
         mc:Ignorable="d"
-        Title="Eleves" Height="450" Width="800" Background="{DynamicResource BackgroundWindow}">
+        Title="Liste des eleves" Height="450" MaxHeight="450" Width="800" MaxWidth="800" Background="{DynamicResource BackgroundWindow}">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -28,7 +28,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False">
+                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False" CellStyle="{DynamicResource SelectedBackground}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Nom" Binding="{Binding NomEleve}" Width="2*"/>
                         <DataGridTextColumn Header="Prenom" Binding="{Binding PrenomEleve}" Width="2*"/>
