--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionCantine"
         mc:Ignorable="d"
-        Title="Gestion Cantine" Height="450" Width="800">
+        Title="Gestion Cantine" Height="450" MaxHeight="450" Width="800" MaxWidth="800">
    
     <Grid Background="{DynamicResource BackgroundWindow}">
         <Grid.RowDefinitions>
